# todo-list

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: env.py
alembic/versions/: cee1330df50f_initial_migration.py
api/: app.py  dependencies.py  routers.py
api/controller_schemas/: __init__.py
api/controller_schemas/requests/: __init__.py  project_requests.py  task_requests.py
api/controller_schemas/responses/: __init__.py  project_responses.py  task_responses.py
api/controllers/: __init__.py  project_controller.py  task_controller.py
app/: main.py
app/cli/: interface.py
app/commands/: autoclose_overdue.py  scheduler.py
app/db/: base.py  in_memory_storage.py  session.py
app/exceptions/: base.py  repository_exceptions.py  service_exceptions.py
app/models/: project.py  task.py
app/repositories/: base.py  project_repository.py  task_repository.py
app/services/: project_service.py  task_service.py
app/validators/: base.py  project_validators.py  task_validators.py  validators.py
src/todolist/: main.py
src/todolist/cli/: interface.py
src/todolist/core/: exceptions.py  validators.py
src/todolist/core/entities/: task.py
src/todolist/core/services/: project_service.py  task_service.py
src/todolist/core/storage/: in_memory_storage.py
