[tool.poetry]
name = "todolist"
version = "0.1.0"
description = "ToDoList - Phase 3 (FastAPI)"
authors = ["Your Name <you@example.com>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.22.0"}
SQLAlchemy = "^2.0"
pydantic = "^1.10.7"
python-jose = "^3.3.0"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
alembic = "^1.11.1"

[tool.poetry.scripts]
start = "uvicorn main:app --host 0.0.0.0 --port 8000"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.alembic]
script_location = "alembic"
prepend_sys_path = "."
version_path_separator = "os"
